fix overlapping text navbar mobile

--- a/style.css
+++ b/style.css
@@ -287,8 +287,6 @@ h2{
     }
     #content{
         margin:0;
-        padding-left:10px;
-        padding-right:10px;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
@@ -297,12 +295,13 @@ h2{
     #content>a{
         font-size:15px;
         font-weight: bolder;
-        width:20%
+        width:20%;
     }
 
     #portraitBox{
         transform:scale(0.8,0.8);
         left:calc(10% - 65px);
+        top:-30px;
     }
     #aboutMe{
         padding-left:5%;
